application/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orders-poc
  labels:
    app.kubernetes.io/name: orders-poc
