application/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: orders-api
spec:
  to:
    kind: Service
    name: orders-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
